syntax = "proto3";

package envoy.api.v2.filter;

import "google/protobuf/duration.proto";

// Note that the filter will automatically fail health checks and set the
// x-envoy-immediate-health-check-fail header if the /healthcheck/fail
// admin endpoint has been called. (The /healthcheck/ok admin endpoint
// reverses this behavior).
message HealthCheck {
  // Specifies whether the filter operates in pass through mode or not.
  bool pass_through_mode = 1;
  // Specifies the incoming HTTP endpoint that should be considered the
  // health check endpoint. For example /healthcheck.
  string endpoint = 2;
  // If operating in pass through mode, the amount of time in milliseconds
  // that the filter should cache the upstream response.
  google.protobuf.Duration cache_time = 3;
}
