syntax = "proto3";

package envoy.api.v2.filter.network;
option go_package = "network";

import "api/filter/accesslog.proto";

import "google/protobuf/duration.proto";

// [V2-API-DIFF] The route match now takes place in the FilterChainMatch table.
message TcpProxy {
  // The human readable prefix to use when emitting statistics for the
  // TCP proxy filter. See the statistics documentation for more information.
  string stat_prefix = 1;

  // The upstream cluster to connect to.
  // TODO(htuch): look into shared WeightedCluster support with RDS.
  string cluster = 2;

  // [V2-API-DIFF] The idle timeout for connections managed by the TCP proxy
  // filter. The idle timeout is defined as the period in which there is no
  // active traffic. If not set, there is no idle timeout. When the idle timeout
  // is reached the connection will be closed. The distinction between
  // downstream_idle_timeout/upstream_idle_timeout provides a means to set
  // timeout based on the last byte sent on the downstream/upstream connection.
  google.protobuf.Duration downstream_idle_timeout = 3;
  google.protobuf.Duration upstream_idle_timeout = 4;

  // Configuration for access logs.
  repeated AccessLog access_log = 5;
}
