syntax = "proto3";

package envoy.api.v2.filter.network;
option go_package = "network";

import "envoy/api/v2/config_source.proto";
import "envoy/api/v2/protocol.proto";
import "envoy/api/v2/filter/accesslog/accesslog.proto";
import "envoy/api/v2/route/route.proto";

import "google/protobuf/duration.proto";
import "google/protobuf/struct.proto";
import "google/protobuf/wrappers.proto";

import "validate/validate.proto";
import "gogoproto/gogo.proto";

// [#protodoc-title: HTTP connection manager]
// HTTP connection manager :ref:`configuration overview <config_http_conn_man>`.

message HttpConnectionManager {
  enum CodecType {
    // For every new connection, the connection manager will determine which
    // codec to use. This mode supports both ALPN for TLS listeners as well as
    // protocol inference for plaintext listeners. If ALPN data is available, it
    // is preferred, otherwise protocol inference is used. In almost all cases,
    // this is the right option to choose for this setting.
    AUTO = 0;

    // The connection manager will assume that the client is speaking HTTP/1.1.
    HTTP1 = 1;

    // The connection manager will assume that the client is speaking HTTP/2
    // (Envoy does not require HTTP/2 to take place over TLS or to use ALPN.
    // Prior knowledge is allowed).
    HTTP2 = 2;
  }

  // Supplies the type of codec that the connection manager should use.
  CodecType codec_type = 1 [(validate.rules).enum.defined_only = true];

  // The human readable prefix to use when emitting statistics for the
  // connection manager. See the :ref:`statistics documentation <config_http_conn_man_stats>` for
  // more information.
  string stat_prefix = 2 [(validate.rules).string.min_bytes = 1];

  oneof route_specifier {
    option (validate.required) = true;

    // The connection manager’s route table will be dynamically loaded via the RDS API.
    Rds rds = 3;

    // The route table for the connection manager is static and is specified in this property.
    route.RouteConfiguration route_config = 4;
  }

  // A list of individual HTTP filters that make up the filter chain for
  // requests made to the connection manager. Order matters as the filters are
  // processed sequentially as request events happen.
  repeated HttpFilter http_filters = 5;

  // Whether the connection manager manipulates the :ref:`config_http_conn_man_headers_user-agent`
  // and :ref:`config_http_conn_man_headers_downstream-service-cluster` headers. See the linked
  // documentation for more information. Defaults to false.
  google.protobuf.BoolValue add_user_agent = 6;

  message Tracing {
    enum OperationName {
      // The HTTP listener is used for ingress/incoming requests.
      INGRESS = 0;

      // The HTTP listener is used for egress/outgoing requests.
      EGRESS = 1;
    }

    // The span name will be derived from this field.
    OperationName operation_name = 1 [(validate.rules).enum.defined_only = true];

    // A list of header names used to create tags for the active span. The header name is used to
    // populate the tag name, and the header value is used to populate the tag value. The tag is
    // created if the specified header name is present in the request's headers.
    repeated string request_headers_for_tags = 2;
  }

  // Presence of the object defines whether the connection manager
  // emits :ref:`tracing <arch_overview_tracing>` data to the :ref:`configured tracing provider
  // <envoy_api_msg_config.trace.v2.Tracing>`.
  Tracing tracing = 7;

  // Additional HTTP/1 settings that are passed to the HTTP/1 codec.
  Http1ProtocolOptions http_protocol_options = 8;

  // Additional HTTP/2 settings that are passed directly to the HTTP/2 codec.
  Http2ProtocolOptions http2_protocol_options = 9;

  // An optional override that the connection manager will write to the server
  // header in responses. If not set, the default is *envoy*.
  string server_name = 10;

  // The idle timeout for connections managed by the connection manager. The
  // idle timeout is defined as the period in which there are no active
  // requests. If not set, there is no idle timeout. When the idle timeout is
  // reached the connection will be closed. If the connection is an HTTP/2
  // connection a drain sequence will occur prior to closing the connection. See
  // :ref:`drain_timeout <envoy_api_field_filter.network.HttpConnectionManager.drain_timeout>`.
  google.protobuf.Duration idle_timeout = 11 [(gogoproto.stdduration) = true];

  // The time that Envoy will wait between sending an HTTP/2 “shutdown
  // notification” (GOAWAY frame with max stream ID) and a final GOAWAY frame.
  // This is used so that Envoy provides a grace period for new streams that
  // race with the final GOAWAY frame. During this grace period, Envoy will
  // continue to accept new streams. After the grace period, a final GOAWAY
  // frame is sent and Envoy will start refusing new streams. Draining occurs
  // both when a connection hits the idle timeout or during general server
  // draining. The default grace period is 5000 milliseconds (5 seconds) if this
  // option is not specified.
  google.protobuf.Duration drain_timeout = 12 [(gogoproto.stdduration) = true];

  // Configuration for :ref:`HTTP access logs <arch_overview_access_logs>`
  // emitted by the connection manager.
  repeated accesslog.AccessLog access_log = 13;

  // If set to true, the connection manager will use the real remote address
  // of the client connection when determining internal versus external origin and manipulating
  // various headers. If set to false or absent, the connection manager will use the
  // :ref:`config_http_conn_man_headers_x-forwarded-for` HTTP header. See the documentation for
  // :ref:`config_http_conn_man_headers_x-forwarded-for`,
  // :ref:`config_http_conn_man_headers_x-envoy-internal`, and
  // :ref:`config_http_conn_man_headers_x-envoy-external-address` for more information.
  google.protobuf.BoolValue use_remote_address = 14;

  // Whether the connection manager will generate the :ref:`x-request-id
  // <config_http_conn_man_headers_x-request-id>` header if it does not exist. This defaults to
  // true. Generating a random UUID4 is expensive so in high throughput scenarios where this feature
  // is not desired it can be disabled.
  google.protobuf.BoolValue generate_request_id = 15;

  // How to handle the :ref:`config_http_conn_man_headers_x-forwarded-client-cert` (XFCC) HTTP
  // header.
  enum ForwardClientCertDetails {
    // Do not send the XFCC header to the next hop. This is the default value.
    SANITIZE = 0;

    // When the client connection is mTLS (Mutual TLS), forward the XFCC header
    // in the request.
    FORWARD_ONLY = 1;

    // When the client connection is mTLS, append the client certificate
    // information to the request’s XFCC header and forward it.
    APPEND_FORWARD = 2;

    // When the client connection is mTLS, reset the XFCC header with the client
    // certificate information and send it to the next hop.
    SANITIZE_SET = 3;

    // Always forward the XFCC header in the request, regardless of whether the
    // client connection is mTLS.
    ALWAYS_FORWARD_ONLY = 4;
  };

  // How to handle the :ref:`config_http_conn_man_headers_x-forwarded-client-cert` (XFCC) HTTP
  // header.
  ForwardClientCertDetails forward_client_cert_details = 16
      [(validate.rules).enum.defined_only = true];

  message SetCurrentClientCertDetails {
    // Whether to forward the subject of the client cert. Defaults to false.
    google.protobuf.BoolValue subject = 1;

    // Whether to forward the SAN of the client cert. Defaults to false.
    google.protobuf.BoolValue san = 2;

    // [#not-implemented-hide:]
    // Whether to forward the entire client cert in base64 encoded format. Defaults to false.
    bool cert = 3;
  };

  // This field is valid only when :ref:`forward_client_cert_details
  // <envoy_api_field_filter.network.HttpConnectionManager.forward_client_cert_details>` is
  // APPEND_FORWARD or SANITIZE_SET and the client connection is mTLS. It specifies the fields in
  // the client certificate to be forwarded. Note that in the
  // :ref:`config_http_conn_man_headers_x-forwarded-client-cert` header, *Hash* is always set, and
  // *By* is always set when the client certificate presents the SAN value.
  SetCurrentClientCertDetails set_current_client_cert_details = 17;
}

message Rds {
  // Configuration source specifier for RDS.
  ConfigSource config_source = 1
      [(validate.rules).message.required = true, (gogoproto.nullable) = false];

  // The name of the route configuration. This name will be passed to the RDS
  // API. This allows an Envoy configuration with multiple HTTP listeners (and
  // associated HTTP connection manager filters) to use different route
  // configurations.
  string route_config_name = 2 [(validate.rules).string.min_bytes = 1];
}

message HttpFilter {
  // The name of the filter to instantiate. The name must match a supported
  // filter. The built-in filters are:
  //
  // [#comment:TODO(mattklein123): Auto generate the following list]
  // * :ref:`envoy.buffer <config_http_filters_buffer>`
  // * :ref:`envoy.cors <config_http_filters_cors>`
  // * :ref:`envoy.fault <config_http_filters_fault_injection>`
  // * :ref:`envoy.http_dynamo_filter <config_http_filters_dynamo>`
  // * :ref:`envoy.grpc_http1_bridge <config_http_filters_grpc_bridge>`
  // * :ref:`envoy.grpc_json_transcoder <config_http_filters_grpc_json_transcoder>`
  // * :ref:`envoy.grpc_web <config_http_filters_grpc_web>`
  // * :ref:`envoy.health_check <config_http_filters_health_check>`
  // * :ref:`envoy.lua <config_http_filters_lua>`
  // * :ref:`envoy.rate_limit <config_http_filters_rate_limit>`
  // * :ref:`envoy.router <config_http_filters_router>`
  // * :ref:`envoy.squash <config_http_filters_squash>`
  string name = 1 [(validate.rules).string.min_bytes = 1];

  // Filter specific configuration which depends on the filter being
  // instantiated. See the supported filters for further documentation.
  google.protobuf.Struct config = 2;

  // [#not-implemented-hide:]
  // This is hidden as type has been deprecated and is no longer required.
  message DeprecatedV1 {
    string type = 1;
  }

  // [#not-implemented-hide:]
  // This is hidden as type has been deprecated and is no longer required.
  DeprecatedV1 deprecated_v1 = 3 [deprecated = true];
}
